--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <!-- Dependency versions -->
         <junit.version>5.9.3</junit.version>
         <mockito.version>4.11.0</mockito.version>
         <mongodb.version>4.9.1</mongodb.version>
@@ -30,8 +29,7 @@
     </properties>
 
     <dependencies>
-		
-		 <!-- MySQL & JPA -->
+        <!-- MySQL & JPA -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -47,7 +45,7 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
-		
+
         <!-- MongoDB -->
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -95,7 +93,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Testcontainers for Docker -->
+        <!-- Testcontainers -->
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -125,7 +123,7 @@
 
     <build>
         <plugins>
-            <!-- Compiler Plugin -->
+            <!-- Compiler -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -135,14 +133,14 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire for Tests -->
+            <!-- Surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
             </plugin>
 
-            <!-- Exec Plugin for Running Application -->
+            <!-- Exec -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -152,7 +150,7 @@
                 </configuration>
             </plugin>
 
-            <!-- JaCoCo Coverage -->
+            <!-- JaCoCo -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -162,6 +160,13 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>com/todoapp/gui/MainFrame.class</exclude>
+                                <exclude>com/todoapp/gui/MainFrame$*.class</exclude>
+                                <exclude>com/todoapp/TodoApplication.class</exclude>
+                            </excludes>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>report</id>
@@ -171,16 +176,16 @@
                         </goals>
                         <configuration>
                             <excludes>
-                                <!-- Exclude GUI implementation files (not controller) -->
                                 <exclude>com/todoapp/gui/MainFrame.class</exclude>
                                 <exclude>com/todoapp/gui/MainFrame$*.class</exclude>
+                                <exclude>com/todoapp/TodoApplication.class</exclude>
                             </excludes>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
 
-            <!-- PITest Mutation Testing -->
+            <!-- PITest -->
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
@@ -192,41 +197,31 @@
                         <version>1.1.2</version>
                     </dependency>
                 </dependencies>
-               <configuration>
-    	<!-- Run mutation testing ONLY on business logic + controller -->
-			    <targetClasses>
-			        <param>com.todoapp.model.*</param>
-			        <param>com.todoapp.repository.*</param>
-			        <param>com.todoapp.service.*</param>
-			        <param>com.todoapp.config.*</param>
-			
-			        <!-- Include controller but NOT GUI -->
-			        <param>com.todoapp.gui.MainFrameController</param>
-			    </targetClasses>
-			
-			    <!-- EXCLUDE GUI TEST FILES -->
-			    <excludedTestClasses>
-			        <param>com.todoapp.gui.*E2ETest</param>
-			    </excludedTestClasses>
-			
-			    <!-- EXCLUDE GUI IMPLEMENTATION CLASSES -->
-			    <excludedClasses>
-			        <param>com.todoapp.gui.MainFrame</param>
-				        <param>com.todoapp.gui.MainFrame$*</param>
-			    </excludedClasses>
-			
-			    <!-- Force headless mode  -->
-			    <jvmArgs>
-			        <param>-Djava.awt.headless=true</param>
-			    </jvmArgs>
-			
-			    <outputFormats>
-			        <outputFormat>HTML</outputFormat>
-			        <outputFormat>XML</outputFormat>
-			    </outputFormats>
-			
-			    <mutationThreshold>100</mutationThreshold>
-               <timeoutConstant>10000</timeoutConstant>
+                <configuration>
+                    <targetClasses>
+                        <param>com.todoapp.model.*</param>
+                        <param>com.todoapp.repository.*</param>
+                        <param>com.todoapp.service.*</param>
+                        <param>com.todoapp.config.*</param>
+                        <param>com.todoapp.gui.MainFrameController</param>
+                    </targetClasses>
+                    <excludedTestClasses>
+                        <param>com.todoapp.gui.*E2ETest</param>
+                    </excludedTestClasses>
+                    <excludedClasses>
+                        <param>com.todoapp.gui.MainFrame</param>
+                        <param>com.todoapp.gui.MainFrame$*</param>
+                        <param>com.todoapp.TodoApplication</param>
+                    </excludedClasses>
+                    <jvmArgs>
+                        <param>-Djava.awt.headless=true</param>
+                    </jvmArgs>
+                    <outputFormats>
+                        <outputFormat>HTML</outputFormat>
+                        <outputFormat>XML</outputFormat>
+                    </outputFormats>
+                    <mutationThreshold>100</mutationThreshold>
+                    <timeoutConstant>10000</timeoutConstant>
                     <timeoutFactor>3.0</timeoutFactor>
                     <threads>4</threads>
                 </configuration>
