--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 
       - name: Run All Tests
-        run: mvn clean test
+        run: mvn clean verify
         env:
           DISPLAY: :99
 
