--- a/pom.xml
+++ b/pom.xml
@@ -133,11 +133,42 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire -->
+            <!-- Surefire (Unit Tests) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <java.awt.headless>true</java.awt.headless>
+                    </systemPropertyVariables>
+                    <argLine>${argLine} -Djava.awt.headless=true -Dapple.awt.UIElement=true</argLine>
+                    <!-- Exclude E2E GUI tests from Surefire - they cause headless failures -->
+                    <excludes>
+                        <exclude>**/*E2ETest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            
+            <!-- Failsafe (Integration Tests) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <systemPropertyVariables>
+                        <java.awt.headless>true</java.awt.headless>
+                    </systemPropertyVariables>
+                    <argLine>${argLine} -Djava.awt.headless=true -Dapple.awt.UIElement=true</argLine>
+                </configuration>
             </plugin>
 
             <!-- Exec -->
@@ -150,13 +181,15 @@
                 </configuration>
             </plugin>
 
-            <!-- JaCoCo -->
+            <!-- JaCoCo Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.version}</version>
                 <executions>
+                    <!-- Prepare agent for unit tests (Surefire) -->
                     <execution>
+                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -168,6 +201,23 @@
                             </excludes>
                         </configuration>
                     </execution>
+                    
+                    <!-- Prepare agent for integration tests (Failsafe) -->
+                    <execution>
+                        <id>prepare-agent-integration</id>
+                        <goals>
+                            <goal>prepare-agent-integration</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>com/todoapp/gui/MainFrame.class</exclude>
+                                <exclude>com/todoapp/gui/MainFrame$*.class</exclude>
+                                <exclude>com/todoapp/TodoApplication.class</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                    
+                    <!-- Generate unit test report -->
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
@@ -182,10 +232,65 @@
                             </excludes>
                         </configuration>
                     </execution>
+                    
+                    <!-- Generate integration test report -->
+                    <execution>
+                        <id>report-integration</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>report-integration</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>com/todoapp/gui/MainFrame.class</exclude>
+                                <exclude>com/todoapp/gui/MainFrame$*.class</exclude>
+                                <exclude>com/todoapp/TodoApplication.class</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                    
+                    <!-- Merge both reports into final aggregate report -->
+                    <execution>
+                        <id>merge-results</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>merge</goal>
+                        </goals>
+                        <configuration>
+                            <fileSets>
+                                <fileSet>
+                                    <directory>${project.build.directory}</directory>
+                                    <includes>
+                                        <include>jacoco.exec</include>
+                                        <include>jacoco-it.exec</include>
+                                    </includes>
+                                </fileSet>
+                            </fileSets>
+                            <destFile>${project.build.directory}/jacoco-aggregate.exec</destFile>
+                        </configuration>
+                    </execution>
+                    
+                    <!-- Generate final aggregate report -->
+                    <execution>
+                        <id>aggregate-report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/jacoco-aggregate.exec</dataFile>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                            <excludes>
+                                <exclude>com/todoapp/gui/MainFrame.class</exclude>
+                                <exclude>com/todoapp/gui/MainFrame$*.class</exclude>
+                                <exclude>com/todoapp/TodoApplication.class</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
-            <!-- PITest -->
+            <!-- PITest Mutation Testing -->
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
@@ -207,6 +312,7 @@
                     </targetClasses>
                     <excludedTestClasses>
                         <param>com.todoapp.gui.*E2ETest</param>
+                        
                     </excludedTestClasses>
                     <excludedClasses>
                         <param>com.todoapp.gui.MainFrame</param>
@@ -221,8 +327,8 @@
                         <outputFormat>XML</outputFormat>
                     </outputFormats>
                     <mutationThreshold>100</mutationThreshold>
-                    <timeoutConstant>10000</timeoutConstant>
-                    <timeoutFactor>3.0</timeoutFactor>
+                    <timeoutConstant>50000</timeoutConstant>
+                    <timeoutFactor>5.0</timeoutFactor>
                     <threads>4</threads>
                 </configuration>
             </plugin>
